# gcp-transform-solver

./: .gitignore  CMakeLists.txt  README.md  colmap_utils.py  config.py  get_camera_parameters.py  get_gcp_coordinates.py  solve_coordinate_transform.py  solve_gcp_coordinates.py  solve_gcp_transform.py  test_solve_coordinate_transform.py  write_gcp_coordinates.py
src/: CMakeLists.txt  my_colmap_cameras.h  point_coordinate_solver.cc  test_gcp_transform.cc
